@@ -89,7 +89,7 @@
       <dt><label for="frame-id-expression">frameId</label></dt>
       <dd><input type="text" id="frame-id-expression"></dd>
     </dl>
-    <div><button id="show-previous-results">Show previous results</button></div>
+    <div><button id="focus-frame">Focus frame</button><button id="show-previous-results">Show previous results</button></div>
   </div>
 </div>
 <div>
