@@ -1,3 +1,9 @@
+2017-11-07  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_content.js: 
+	Define findFrameElement function.
+	Set "message" handler to window.
+
 2017-11-06  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/background/try_xpath_background.js:
